# VibeBase

./: CHANGELOG.md  README.md  arena-history.html  arena-statistics.html  arena.html  index.html  package-lock.json  package.json  settings.html  variables.html  vite.config.ts
.github/workflows/: release.yml
scripts/release/: build-macos-m-chip.sh  build-windows-x64.ps1  build-windows-x86.ps1
src/: App.tsx  arenaHistory.tsx  arenaStatistics.tsx  main.tsx  settings.tsx  variables.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src-tauri/src/commands/: execution.rs  git.rs  llm_provider.rs  metadata.rs  mod.rs  prompt.rs  provider_models.rs  recent_projects.rs  update.rs  window.rs  workspace.rs
src-tauri/src/models/: config.rs  execution.rs  git.rs  prompt.rs
src-tauri/src/services/: database.rs  executor.rs  file_tracker.rs  git_service.rs  keychain.rs  mod.rs  template.rs  validator.rs
src-tauri/src/services/providers/: mod.rs  openai.rs
src-tauri/src/sql/: app_schema.sql  project_schema.sql
src/components/: WelcomeScreen.tsx
src/components/arena/: ArenaHistoryWindow.tsx  ArenaStatisticsWindow.tsx  ArenaWindow.tsx
src/components/dialogs/: CustomProviderDialog.tsx  NewFolderDialog.tsx  NewPromptDialog.tsx  RenameDialog.tsx
src/components/editor/: MonacoEditor.tsx
src/components/execution/: ExecutionPanel.tsx
src/components/filetree/: ContextMenu.tsx  FileTreeNode.tsx
src/components/git/: GitConfigDialog.tsx  GitPanel.tsx  GitStatusIndicator.tsx
src/components/history/: HistoryPanel.tsx
src/components/layout/: Canvas.tsx  Console.tsx  Header.tsx  Inspector.tsx  Navigator.tsx
src/components/metadata/: MetadataPanel.tsx
src/components/settings/: AboutPanel.tsx  ApiKeyManager.tsx  GitSettingsPanel.tsx  LLMProviderManager.tsx  SettingsPanel.tsx  WorkspaceManager.tsx
src/components/test/: DragTest.tsx  SimpleDragTest.tsx
src/components/ui/: TagInput.tsx  WindowControls.tsx
src/components/variables/: VariablesManager.tsx
src/i18n/: config.ts
src/i18n/locales/: en-US.json  zh-CN.json  zh-Hans.json  zh-Hant.json  zh-TW.json
src/stores/: configStore.ts  consoleStore.ts  editorStore.ts  gitStore.ts  themeStore.ts
src/styles/: index.css
src/types/: index.ts
src/utils/: logger.ts
