[package]
name = "vibebase"
version = "0.1.8"
description = "A Prompt IDE for LLM Engineering"
authors = ["VibeBase Team"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "updater", "window-set-size", "window-set-fullscreen", "window-set-title", "window-set-decorations", "window-start-dragging", "window-close", "window-set-always-on-top", "window-maximize", "window-set-max-size", "window-unmaximize", "window-request-user-attention", "window-unminimize", "window-set-skip-taskbar", "window-set-icon", "window-center", "window-hide", "window-show", "window-set-resizable", "window-create", "window-set-position", "window-set-focus", "window-set-min-size", "window-minimize", "dialog-open", "fs-read-dir", "fs-read-file", "fs-write-file", "path-all", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
anyhow = "1.0"
regex = "1.10"
reqwest = { version = "0.11", features = ["json", "stream"] }
futures = "0.3"
rusqlite = { version = "0.30", features = ["bundled"] }
chrono = "0.4"
dirs-next = "2.0"
keyring = "2.3"
pulldown-cmark = "0.9"
sha2 = "0.10"
git2 = { version = "0.18", features = ["vendored-libgit2", "vendored-openssl"] }

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.24"
objc = "0.2"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

