[package]
name = "vibebase"
version = "0.2.0"
description = "A Prompt IDE for LLM Engineering"
authors = ["VibeBase Team"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
tauri-plugin-updater = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
anyhow = "1.0"
regex = "1.10"
reqwest = { version = "0.11", features = ["json", "stream"] }
futures = "0.3"
rusqlite = { version = "0.30", features = ["bundled"] }
chrono = "0.4"
dirs-next = "2.0"
keyring = "2.3"
pulldown-cmark = "0.9"
sha2 = "0.10"
git2 = { version = "0.18", features = ["vendored-libgit2", "vendored-openssl"] }
raw-window-handle = "0.6"

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.24"
objc = "0.2"

[target.'cfg(target_os = "windows")'.dependencies]
winreg = "0.52"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

